# monas

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  doc.yml  release.yml
docs/: conf.py  index.md  integration.md  mkdocs.yml  quickstart.md  reference.md  requirements.txt
news/: towncrier_template.md
src/monas/: __init__.py  __main__.py  cli.py  config.py  project.py  questions.py  utils.py  vcs.py
src/monas/commands/: add.py  bump.py  changed.py  common.py  init.py  install.py  list.py  new.py  publish.py  remove.py
src/monas/metadata/: __init__.py  base.py  pep621.py  setupcfg.py
src/mono/: __init__.py  cli.py  config.py  project.py  questions.py  utils.py  vcs.py
src/mono/commands/: add.py  bump.py  changed.py  common.py  init.py  install.py  list.py  new.py  publish.py
tests/: __init__.py  conftest.py  test_core.py  test_utils.py
tests/cli/: test_add.py  test_bump.py  test_changed.py  test_init.py  test_install.py  test_list.py  test_new.py  test_publish.py  test_remove.py
