[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "monas"
description = "Python monorepo made easy"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gitpython>=3",
    "click>=7",
    "packaging>=20",
    "questionary",
    "rich-click>=1.3.0",
    "twine",
    "tomlkit>=0.8",
    "virtualenv>=20.1.0",
    "parver",
]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Repository = "https://github.com/frostming/monas"
Homepage = "https://github.com/frostming/monas"

[project.scripts]
monas = "monas.cli:main"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
packge-dir = "src"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=6.1",
]

[tool.pdm.scripts]
test = "pytest tests/"
lint = "pre-commit run --all-files"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
)/
'''

[tool.ruff]
line-length = 88
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
src = ["src"]
target-version = "py38"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["monas"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning"
]
